fix: change z-index of modal

--- a/source/style/scss/components/_modal.scss
+++ b/source/style/scss/components/_modal.scss
@@ -2,7 +2,7 @@
     visibility: hidden;
     opacity: 0;
     position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    z-index: 99; /* Sit on top */
     padding-top: 10vh; /* Location of the box */
     left: 0;
     top: 0;
